tests/bad/12/test.scm
(letrec ((a (lambda (x) b)) (b 50)) (a))